<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:theme="@style/Icesdk.Theme.Light"
    >

    <TextView
        android:id="@+id/icesdk_textview4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/icesdk_join_ice_today"
        android:textAppearance="@style/Icesdk.H6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/icesdk_textview5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="64dp"
        android:gravity="center"
        android:text="@string/icesdk_you_are_free_to_accept_or_refuse"
        android:textAppearance="@style/Icesdk.H4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/icesdk_textview4"
        />

    <TextView
        android:id="@+id/icesdk_textview6"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="67dp"
        android:layout_marginTop="52dp"
        android:gravity="center"
        android:text="@string/icesdk_have_you_ever_felt"
        android:textAppearance="@style/Icesdk.Body1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/icesdk_textview5"
        />

    <TextView
        android:id="@+id/icesdk_textview7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/icesdk_freedom"
        android:textAppearance="@style/Icesdk.H5.Extrabold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/icesdk_textview6"
        />

    <TextView
        android:id="@+id/icesdk_textview8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="-1dp"
        android:fontFamily="@font/euclid_circular_b_medium"
        android:text="@string/icesdk_enjoy_global_freedom"
        android:textAppearance="@style/Icesdk.Subtitle1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/icesdk_textview7"
        />

    <TextView
        android:id="@+id/icesdk_textview9"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="67dp"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:text="@string/icesdk_do_you_feel_like_a_slave"
        android:textAppearance="@style/Icesdk.Body1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/icesdk_textview8"
        />

    <TextView
        android:id="@+id/icesdk_textview10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/icesdk_take_action"
        android:textAppearance="@style/Icesdk.H5.Extrabold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/icesdk_textview9"
        />

    <TextView
        android:id="@+id/icesdk_textview11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="-1dp"
        android:fontFamily="@font/euclid_circular_b_medium"
        android:text="@string/icesdk_claim_your_financial_freedom"
        android:textAppearance="@style/Icesdk.Subtitle1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/icesdk_textview10"
        />

    <TextView
        android:id="@+id/icesdk_textview12"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="67dp"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:text="@string/icesdk_do_you_want_to_make_your_own_decisions"
        android:textAppearance="@style/Icesdk.Body1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/icesdk_textview11"
        />

    <TextView
        android:id="@+id/icesdk_textview13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/icesdk_dao"
        android:textAppearance="@style/Icesdk.H5.Extrabold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/icesdk_textview12"
        />

    <TextView
        android:id="@+id/icesdk_textview14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="-1dp"
        android:layout_marginBottom="36dp"
        android:fontFamily="@font/euclid_circular_b_medium"
        android:text="@string/icesdk_decentralized_autonomous_organization"
        android:textAppearance="@style/Icesdk.Subtitle1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/icesdk_textview13"
        />
</androidx.constraintlayout.widget.ConstraintLayout>
