<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/Icesdk.Theme.Light"
    >

    <TextView
        android:id="@+id/icesdk_textview5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="64dp"
        android:layout_marginTop="86dp"
        android:gravity="center"
        android:text="@string/icesdk_the_power_of_the_community"
        android:textAppearance="@style/Icesdk.H2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/icesdk_textview6"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="64dp"
        android:gravity="center"
        android:text="@string/icesdk_invite_your_friends_and_join_the_ice_network"
        android:textAppearance="@style/Icesdk.Body1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/icesdk_textview5"
        />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="48dp"
        app:cardBackgroundColor="@color/icesdk_dark_blue"
        app:cardCornerRadius="8dp"
        app:layout_constraintTop_toBottomOf="@id/icesdk_textview6"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipChildren="false"
            android:theme="@style/Icesdk.Theme"
            >

            <ImageView
                android:id="@+id/icesdk_imageview2"
                android:layout_width="450dp"
                android:layout_height="0dp"
                android:layout_marginTop="200dp"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_loopergroup"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/icesdk_imageview3"
                />

            <TextView
                android:id="@+id/icesdk_textview21"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="48dp"
                android:gravity="center"
                android:text="@string/icesdk_your_team_your_trust_your_success"
                android:textAppearance="@style/Icesdk.H4"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"

                />

            <TextView
                android:id="@+id/icesdk_textview22"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="40dp"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:text="@string/icesdk_since_the_ice_network_is_based_on_trust"
                android:textAppearance="@style/Icesdk.Body1"
                android:textColor="?colorOnPrimary"
                android:textSize="11sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/icesdk_textview21"

                />

            <ImageView
                android:id="@+id/icesdk_textview23"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:src="@drawable/ic_users"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/icesdk_textview22"
                />

            <ImageView
                android:id="@+id/icesdk_imageview3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/icesdk_textview23"
                app:srcCompat="@drawable/notifications"
                tools:layout_editor_absoluteX="106dp"
                tools:layout_editor_absoluteY="326dp"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>
