<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
    android:theme="@style/Icesdk.Theme"
    app:cardBackgroundColor="@color/icesdk_dark_blue"
    app:cardCornerRadius="20dp"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <com.google.android.material.button.MaterialButton
            android:id="@+id/icesdk_icon"
            style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="16dp"
            android:clickable="false"
            android:focusable="false"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:paddingLeft="7dp"
            android:paddingRight="12dp"
            app:backgroundTint="@color/icesdk_blue"
            app:cornerRadius="12dp"
            app:icon="@drawable/icesdk_ice"
            app:iconPadding="0dp"
            app:iconTint="?colorOnPrimary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.5"
            />

        <TextView
            android:id="@+id/icesdk_textview29"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"

            android:layout_marginEnd="16dp"
            android:fontFamily="@font/lato"
            android:text="@string/icesdk_get_started"
            android:textAppearance="@style/Icesdk.Body2"
            app:layout_constraintBottom_toTopOf="@+id/icesdk_textview30"
            app:layout_constraintEnd_toStartOf="@+id/icesdk_download_button"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/icesdk_icon"
            app:layout_constraintTop_toTopOf="@+id/icesdk_icon"
            />

        <TextView
            android:id="@+id/icesdk_textview30"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginEnd="16dp"
            android:autoSizeMaxTextSize="14sp"
            android:autoSizeMinTextSize="10sp"
            android:autoSizeTextType="uniform"
            android:fontFamily="@font/lato"
            android:gravity="center_vertical"
            android:text="@string/icesdk_join_the_community"
            android:textColor="?colorOnPrimary"
            app:layout_constraintBottom_toBottomOf="@+id/icesdk_icon"
            app:layout_constraintEnd_toStartOf="@+id/icesdk_download_button"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toStartOf="@+id/icesdk_textview29"
            app:layout_constraintTop_toBottomOf="@+id/icesdk_textview29"
            app:layout_constraintWidth_default="wrap"
            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/icesdk_download_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/lato"
            android:letterSpacing="0.0"
            android:text="@string/icesdk_download"
            android:textAllCaps="false"
            android:textColor="@color/icesdk_some_blue"
            app:backgroundTint="?colorOnPrimary"
            app:cornerRadius="10dp"
            app:icon="@drawable/icesdk_download"
            app:iconTint="@color/icesdk_some_blue"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toEndOf="@id/icesdk_textview30"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_default="wrap"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>
