<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:theme="@style/Icesdk.Theme"
    tools:background="@color/icesdk_blue"
    >

    <icesdk.IceTextView
        android:id="@+id/icesdk_textview16"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="44dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/icesdk_sign_up_with_our_code"
        android:textAppearance="@style/Icesdk.Body2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/icesdk_copy_button"
        style="?borderlessButtonStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="4dp"
        android:drawableEnd="@drawable/ic_copy"
        android:fontFamily="@font/euclid_circular_b_regular"
        android:gravity="start|center_vertical"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:letterSpacing="0.05"
        android:minHeight="40dp"
        android:paddingStart="20dp"
        android:text="@string/icesdk_promo_code_value"
        android:textAllCaps="false"
        android:textColor="@android:color/black"
        android:textSize="13sp"
        android:textStyle="bold"
        app:backgroundTint="@android:color/white"
        app:cornerRadius="6dp"
        app:iconTint="@android:color/transparent"
        app:layout_constraintEnd_toStartOf="@id/icesdk_copyText"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/icesdk_textview16"
        />

    <TextView
        android:id="@+id/icesdk_copyText"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="6dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/bubble"
        android:fontFamily="@font/euclid_circular_b_medium"
        android:gravity="center"
        android:paddingRight="4dp"
        android:paddingLeft="8dp"
        android:text="@string/icesdk_copy"
        android:textColor="@android:color/white"
        android:textSize="11sp"
        app:layout_constraintBottom_toBottomOf="@id/icesdk_copy_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/icesdk_copy_button"
        app:layout_constraintTop_toTopOf="@+id/icesdk_copy_button"
        app:layout_constraintVertical_bias="0.0"
        />

    <ImageView
        android:id="@+id/icesdk_thumb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:src="@drawable/icon_park_index_finger_top"
        app:layout_constraintEnd_toStartOf="@id/icesdk_textview17"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/icesdk_textview17"
        />

    <TextView
        android:id="@+id/icesdk_textview17"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:gravity="center"

        android:text="@string/icesdk_use_this_invitation_code"
        android:textAppearance="@style/Icesdk.Subtitle1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@id/icesdk_thumb"
        app:layout_constraintTop_toBottomOf="@+id/icesdk_copy_button"
        app:layout_constraintWidth_default="wrap"
        />

    <ImageView
        android:id="@+id/icesdk_playstore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/icesdk_textview17"
        app:srcCompat="@drawable/google_play"
        />

</androidx.constraintlayout.widget.ConstraintLayout>
